refactored table ajax update